fix:enquiry customer update
