# docs/swagger.yaml
@@ -48,6 +48,9 @@ definitions:
     - DEV
     - SUPER ADMIN
     - ADMIN
+    - STAFF
+    - OUTSOURCED
+    - VIEWER
     type: string
     x-enum-comments:
       ADMIN: to be used by the application administrator
@@ -59,6 +62,9 @@ definitions:
     - DEV
     - SUPERADMIN
     - ADMIN
+    - STAFF
+    - OUTSOURCED
+    - VIEWER
   entities.User:
     properties:
       ID:
@@ -249,11 +255,13 @@ definitions:
         type: string
       email:
         type: string
+      firstName:
+        type: string
       id:
         type: integer
       isActive:
         type: boolean
-      name:
+      lastName:
         type: string
       phoneNumber:
         type: string
@@ -268,12 +276,14 @@ definitions:
         type: integer
       email:
         type: string
+      firstName:
+        description: Customer fields
+        type: string
       id:
         type: integer
       isActive:
         type: boolean
-      name:
-        description: Customer fields
+      lastName:
         type: string
       notes:
         type: string
@@ -366,8 +376,6 @@ definitions:
         type: integer
       isActive:
         type: boolean
-      measurementId:
-        type: integer
       orderId:
         type: integer
       price:
@@ -385,6 +393,45 @@ definitions:
         type: integer
       toChannel:
         type: integer
+    type: object
+  requestModel.UpdateEnquiryAndCustomer:
+    properties:
+      address:
+        type: string
+      customerID:
+        description: Customer fields
+        type: integer
+      customerId:
+        type: integer
+      customerIsActive:
+        type: boolean
+      email:
+        type: string
+      firstName:
+        type: string
+      id:
+        description: Enquiry fields
+        type: integer
+      isActive:
+        type: boolean
+      lastName:
+        type: string
+      notes:
+        type: string
+      phoneNumber:
+        type: string
+      referredBy:
+        type: string
+      referrerPhoneNumber:
+        type: string
+      source:
+        type: string
+      status:
+        type: string
+      subject:
+        type: string
+      whatsappNumber:
+        type: string
     type: object
   requestModel.User:
     properties:
@@ -532,16 +579,18 @@ definitions:
         items:
           $ref: '#/definitions/responseModel.Enquiry'
         type: array
+      firstName:
+        type: string
       id:
         type: integer
       isActive:
         type: boolean
+      lastName:
+        type: string
       measurements:
         items:
           $ref: '#/definitions/responseModel.Measurement'
         type: array
-      name:
-        type: string
       orders:
         items:
           $ref: '#/definitions/responseModel.Order'
@@ -557,7 +606,9 @@ definitions:
         type: integer
       email:
         type: string
-      name:
+      firstName:
+        type: string
+      lastName:
         type: string
       phoneNumber:
         type: string
@@ -591,6 +642,8 @@ definitions:
         $ref: '#/definitions/responseModel.Customer'
       customerId:
         type: integer
+      customerName:
+        type: string
       dressType:
         type: string
       id:
@@ -602,7 +655,8 @@ definitions:
       measurementDate:
         type: string
       measurementTakenBy:
-        $ref: '#/definitions/responseModel.User'
+        description: MeasurementTakenBy   *User  `json:"measurementTakenBy,omitempty"`
+        type: string
       measurementTakenById:
         type: integer
       measurements:
@@ -639,10 +693,6 @@ definitions:
         type: integer
       isActive:
         type: boolean
-      measurement:
-        $ref: '#/definitions/responseModel.Measurement'
-      measurementId:
-        type: integer
       order:
         $ref: '#/definitions/responseModel.Order'
       orderId:
@@ -1157,20 +1207,21 @@ paths:
       summary: Update Enquiry
       tags:
       - Enquiry
-  /enquiry/{id}/customer/{customerId}:
+  /enquiry/{id}/customer:
     put:
       consumes:
       - application/json
-      description: Updates the customer linked to an enquiry
+      description: Updates both enquiry and customer data together
       parameters:
+      - description: enquiry and customer
+        in: body
+        name: enquiry
+        required: true
+        schema:
+          $ref: '#/definitions/requestModel.UpdateEnquiryAndCustomer'
       - description: Enquiry id
         in: path
         name: id
-        required: true
-        type: integer
-      - description: Customer id
-        in: path
-        name: customerId
         required: true
         type: integer
       responses:
@@ -1186,7 +1237,7 @@ paths:
           description: Not Implemented
           schema:
             $ref: '#/definitions/response.Response'
-      summary: Update Enquiry Customer
+      summary: Update Enquiry and Customer
       tags:
       - Enquiry
   /health:
