# internal/router/router.go
@@ -135,8 +135,8 @@ func InitRouter(handler baseHandler.BaseHandler, srvConfig config.ServerConfig) 
 		enquiryEndpoints := appRouter.Group("enquiry", router.VerifyJWT(srvConfig.JwtSecretKey))
 		{
 			enquiryEndpoints.POST("", handler.EnquiryHandler.SaveEnquiry)
+			enquiryEndpoints.PUT(":id/customer", handler.EnquiryHandler.UpdateEnquiryAndCustomer)
 			enquiryEndpoints.PUT(":id", handler.EnquiryHandler.UpdateEnquiry)
-			enquiryEndpoints.PUT(":id/customer/:customerId", handler.EnquiryHandler.UpdateEnquiryCustomer)
 			enquiryEndpoints.GET(":id", handler.EnquiryHandler.Get)
 			enquiryEndpoints.GET("", handler.EnquiryHandler.GetAllEnquiries)
 			enquiryEndpoints.DELETE(":id", handler.EnquiryHandler.Delete)
